--- a/docs/版本详细说明.md
+++ b/docs/版本详细说明.md
@@ -2,6 +2,64 @@
 
 旧版为MiLi提供的基线；新版为Ryan修改开发。以下为按模块归纳的功能差异与优化要点
 
+## v7.0 重大更新 - 物品拾取系统重构 (20250831)
+
+### 核心改进概述
+v7.0版本对物品拾取系统进行了全面重构，从原有的"过滤模式"升级为"指定物品拾取模式"，实现了更精确的物品控制能力。
+
+### 主要功能升级
+
+#### 1. 指定物品拾取模式
+- **新增API**：`Game.PickItemName(szItemName)` - 支持按物品名称精确拾取
+- **拾取选项扩展**：从原有的4种模式扩展为5种，新增"只拾取指定物品"选项
+- **精确控制**：用户可以精确指定需要拾取的物品名称，避免拾取无用物品
+
+#### 2. 拖拽式物品管理
+- **交互优化**：支持将游戏内道具直接拖拽到界面输入框
+- **操作简化**：移除原有的"插入"按钮，改为直观的拖拽操作
+- **实时反馈**：拖拽后物品名称立即显示在列表中，操作更直观
+
+#### 3. 智能物品列表
+- **槽位优化**：从18个槽位调整为16个，与配置保持一致
+- **双向操作**：支持直接输入物品名称和拖拽添加两种方式
+- **管理功能**：保留"清空全部"和单个删除功能，操作更便捷
+
+### 技术架构改进
+
+#### 1. 代码模块化
+- **配置管理迁移**：将物品拾取相关配置管理代码从`main.lua`迁移至`mode-pick.lua`
+- **功能集中化**：所有拾取相关功能集中在专门模块中，便于维护和扩展
+- **接口统一**：统一使用变量命名，提高代码一致性
+
+#### 2. 配置系统优化
+- **字段顺序标准化**：确保配置文件字段顺序为`[player][plug][fight][pick][safe]`
+- **加载逻辑优化**：移除加载时立即写入配置的逻辑，避免字段顺序混乱
+- **持久化改进**：优化配置读写逻辑，确保数据一致性
+
+#### 3. UI界面重构
+- **界面简化**：移除复杂的"物品名称过滤模式"选择，改为简洁的"只拾取指定物品"选项
+- **布局优化**：重新设计物品列表显示区域，支持拖拽操作
+- **用户体验**：添加"支持将道具拖入输入框"提示，引导用户正确操作
+
+### 兼容性与稳定性
+
+#### 1. 向后兼容
+- **API兼容**：保持原有拾取API的兼容性，不影响现有功能
+- **配置兼容**：新版本可以读取旧版本配置文件，自动迁移数据
+- **功能保留**：保留所有原有拾取模式，确保平滑升级
+
+#### 2. 错误处理
+- **输入验证**：对物品名称进行有效性验证，避免空值或无效输入
+- **异常处理**：完善的错误处理机制，确保程序稳定运行
+- **用户提示**：友好的错误提示和操作指导
+
+### 性能优化
+- **内存管理**：优化物品列表的内存使用，减少不必要的对象创建
+- **响应速度**：提升拖拽操作的响应速度，提供流畅的用户体验
+- **配置加载**：优化配置文件加载速度，减少启动时间
+
+---
+
 ## 一、核心与配置框架
 
 - **增强**：`fightPosMax` 从 11 提升至 20，支持更多挂机点巡逻路径。
@@ -23,12 +81,17 @@
 
 ## 三、拾取系统（mode-pick.lua + UI）
 
-- **新增**：拾取模式从"背包对照/装备/杂物"扩展为"四档"并默认可"拾取全部物品"。
-- **新增**：物品名称过滤面板（白名单/黑名单/不过滤 + 18 项物品列表、插入/删除/清空），预留逻辑开关并做 UI 显示同步。**暂未对接API无法使用！**
+- **v7.0重大升级**：从"物品过滤模式"升级为"指定物品拾取模式"
+  - 新增 `Game.PickItemName(szItemName)` API，支持精确物品名称拾取
+  - 支持拖拽式物品管理，将游戏内道具直接拖拽到输入框
+  - 16个物品槽位，支持直接输入和拖拽添加，实时更新
+  - 移除复杂的"白名单/黑名单"模式，简化为"只拾取指定物品"选项
+- **v6.4及之前**：拾取模式从"背包对照/装备/杂物"扩展为"四档"并默认可"拾取全部物品"
+- **v6.4及之前**：物品名称过滤面板（白名单/黑名单/不过滤 + 18 项物品列表、插入/删除/清空），预留逻辑开关并做 UI 显示同步。**v7.0已重构此功能！**
 - **优化**：
   - 拾取延迟范围校验（100–5000ms）与默认回退，避免误设置极值导致卡顿或漏拾。
   - 过滤模式在功能未完全支持时以节流提示方式告知，同时不阻断标准拾取流程。
-- **易用**：批量渲染 18 条物品名，支持一键清空与逐条删除；支持即时刷新显示。
+- **易用**：批量渲染物品名，支持一键清空与逐条删除；支持即时刷新显示。
 
 ## 四、保护与道具（mode-safe.lua + UI）
 
@@ -45,10 +108,16 @@
 
 ## 五、UI 与交互（plug.xml）
 
-- **面板标题与版本标记**：`Ryanの辅助面板 v6.5`。
+- **v7.0更新**：面板标题更新为 `Ryanの辅助面板 v7.0`
+- **v7.0重大改进**：拾取界面完全重构
+  - 移除"物品名称过滤模式"选择区域
+  - 新增"只拾取指定物品"选项，集成到拾取类型选择中
+  - 重新设计物品列表区域，支持拖拽操作
+  - 添加"支持将道具拖入输入框"提示
+  - 优化16个物品槽位的布局和交互
+- **v6.5及之前**：面板标题为 `Ryanの辅助面板 v6.5`
 - **新增分页**：
   - 定位点扩展至 20 点，并提供"清空全部点"按钮；新增"导入/导出挂机点"交互区域与文件名输入框。
-  - 拾取页新增"物品名称过滤"大块：模式选择、输入框、18 条列表、插入/删除/清空按钮成组排布。
   - 保护页新增 HP1/HP2、SP1/SP2、6 个"定时物品"位，字段更细化，便于拖拽道具到输入框。
   - 独立说明页：集中展示医生挂机与组队 Tips，并加"支持一下"按钮（外链打开）。
 - **易用性**：
@@ -56,7 +125,8 @@
 
 ## 六、配置读写与容错
 
-- **读写一致性**：所有模块加载后立即将不合法/缺省值写回配置，确保下次启动呈现一致状态。
+- **v7.0优化**：移除加载时立即写入配置的逻辑，确保配置文件字段顺序为 `[player][plug][fight][pick][safe]`
+- **v6.5及之前**：读写一致性：所有模块加载后立即将不合法/缺省值写回配置，确保下次启动呈现一致状态。
 - **容错增强**：诸如 `onlyPickType`、`InPickTime`、`pickFilterMode`、队伍信息等均做边界与空值校验。
 - **提示完善**：导入/导出、清空点位、过滤列表操作均有系统消息提示。
 
@@ -67,7 +137,8 @@
 - 巡逻与寻怪逻辑较简，少量 `nil` 判定与重试控制，沿途打怪触发较弱。
 
 ### Ryan新版特性
-- 路径点 20、导入导出、节流/阈值/默认值体系完善、物品过滤 UI 与后端结构预置、HP/SP 双档与 6 位定时物品。
+- **v7.0新增**：指定物品拾取模式、拖拽式物品管理、智能物品列表、代码模块化重构
+- **v6.5及之前**：路径点 20、导入导出、节流/阈值/默认值体系完善、物品过滤 UI 与后端结构预置、HP/SP 双档与 6 位定时物品。
 - 新增 Buff 自施放与治愈术阈值抬血、沿途打怪即时出手、更多系统提示与健壮性处理。
 
 ## 八、兼容性与版本习惯
@@ -77,13 +148,16 @@
 
 ## 九、可能的影响面与注意事项
 
-- **物品过滤**：当前为"显示与管理列表优先"，过滤执行层已作提示节流，后续若启用请注意与服务端拾取接口能力对齐。
+- **v7.0物品拾取**：全新的指定物品拾取模式，支持拖拽操作，提供更精确的物品控制能力
+- **v6.4及之前物品过滤**：当前为"显示与管理列表优先"，过滤执行层已作提示节流，后续若启用请注意与服务端拾取接口能力对齐。**v7.0已重构此功能！**
 - **节流策略**：全局 1 秒物品使用限制可能改变旧版"瞬时多物并发"行为，但更符合实际冷却与稳定性。
 - **导入导出**：文件名为空/不存在会有友好提示；导入会覆盖 UI 展示与内存配置，请先保存当前配置以免丢失。
 
 ## 十、结论
 
-Ryan 新版在"稳定性、易用性、可配置性、可视化管理"层面全面提升，新增打怪/医生自保策略与 20 点路径、点位导入导出、双档 HP/SP、防抖与节流等改进，适合长时间、多场景挂机；旧版保持基础可用但不具备上述扩展特性。
+Ryan v7.0版本在物品拾取系统方面实现了重大突破，从原有的"过滤模式"升级为"指定物品拾取模式"，提供了更精确、更直观的物品控制能力。配合拖拽式操作和智能物品列表，用户体验得到显著提升。
+
+v6.5及之前版本在"稳定性、易用性、可配置性、可视化管理"层面全面提升，新增打怪/医生自保策略与 20 点路径、点位导入导出、双档 HP/SP、防抖与节流等改进，适合长时间、多场景挂机；旧版保持基础可用但不具备上述扩展特性。
 
 ---
 
