--- a/docs/版本详细说明.md
+++ b/docs/版本详细说明.md
@@ -5,211 +5,185 @@
 ---
 本页内容由AI对比原版后智能增量生成
 
-## v7.1 智能跟随系统重构 (20250831)
+## 一、核心与配置框架
 
-### 核心改进概述
-v7.1版本专注于跟随系统的全面重构，实现了革命性的双层跟随策略，解决了传统跟随系统中"跟随不稳定"和"跟随中断游戏逻辑"的核心痛点。
+### 挂机点系统重大升级
+- **挂机点数量**：从原版的9个提升至20个，支持更复杂的巡逻路径
+- **导入导出功能**：新增挂机点导入/导出能力（保存至/读取自 `./user/positions-<name>.ini`），便于跨图/多号复用坐标与范围
+- **配置管理优化**：主配置读取时加入默认值回填与一次性写回逻辑，避免 `nil`/异常值导致 UI 未初始化
+- **系统提示完善**：日志与系统提示覆盖面扩大（如保存配置、导入导出点位后的成功提示）
 
-### 主要功能升级
+## 二、打怪/医生逻辑（mode-fights.lua）
 
-#### 1. 双层跟随策略
-- **强制跟随层**：距离超过5格时立即强制跟随，确保不会跟丢目标
-- **逻辑跟随层**：距离5格内时在空闲状态智能补充跟随，保持队形
-- **智能切换**：系统根据实时距离自动选择最适合的跟随策略
-- **应用场景**：打怪模式中优先跟随，确保有效距离内不会因打怪而偏离目标
+### v7.2 原地挂机系统优化
+- **智能返回策略**：超出范围OR范围内没目标时立即返回挂机点，避免无效徘徊
+- **优化到达逻辑**：回到挂机点后先检查目标，有目标直接攻击，无目标空闲打坐
+- **医生模式智能技能释放**：GetAttackSkillPtr函数增加智能状态检查，只释放目标缺少的状态技能
+- **根源问题解决**：从技能选择层面彻底解决重复释放技能的问题，医生模式更加精准高效
 
-#### 2. 智能距离判断系统
-- **创新检测方式**：基于`Game.FindCharByName()`搜索范围判断距离
-- **双重检测机制**：25格远距离检测 + 5格近距离检测，精确判断跟随需求
-- **性能优化**：避免复杂的坐标计算，使用游戏原生搜索机制，响应更快
-
-#### 3. 智能跟随范围管理
-- **动态范围计算**：`math.min(Config.fightRange * 2, 25)`，根据挂机范围智能调整
-- **性能边界控制**：最大搜索范围限制为25格，避免大范围搜索影响性能
-- **资源优化**：减少不必要的游戏引擎调用，提升整体运行效率
-- **用户友好**：附近无目标时自动停止跟随，避免队友离线时的无效操作
-
-#### 4. 增强用户体验
-- **智能提示系统**：未设置跟随目标时显示"请选择或输入要跟随的目标"
-- **状态反馈**：实时跟随状态检测，用户可清楚了解当前跟随情况
-- **操作简化**：保持原有跟随设置方式，无需学习新的操作流程
-
-### 技术架构全面升级
-
-#### 1. 代码质量提升
-- **函数命名规范化**：修复`HanldeFindMonster`等4个函数的拼写错误
-- **代码结构优化**：清理冗余跟随调用，消除重复逻辑
-- **注释完善**：更新函数注释，提高代码可读性和维护性
-
-#### 2. 系统架构重构
-- **模块职责分离**：打怪模式使用强制跟随，医生模式保持传统跟随
-- **状态管理优化**：完善的状态机逻辑，确保跟随与游戏逻辑的无缝衔接
-- **错误处理增强**：全面的空值检查和边界条件处理
-
-#### 3. 性能与稳定性
-- **API兼容性**：基于已验证的游戏API，确保功能稳定可靠
-- **资源管理**：优化搜索频率和范围，降低系统资源消耗
-- **异常处理**：完善的错误恢复机制，提高系统健壮性
-
----
-
-## v7.0 重大更新 - 物品拾取系统重构 (20250831)
-
-### 核心改进概述
-v7.0版本实现了物品拾取系统的革命性升级，从传统的"过滤模式"进化为"指定物品拾取模式"，为用户提供了前所未有的精确物品控制能力。
-
-### 主要功能升级
-
-#### 1. 指定物品拾取模式
-- **API对接**：新增`Game.PickItemName(szItemName)`，实现按物品名称精确拾取
-- **模式扩展**：从4种拾取模式扩展为5种，新增"只拾取指定物品"选项
-- **精确控制**：用户可精确指定拾取目标，彻底避免拾取无用物品
-- **智能过滤**：系统自动识别指定物品，其他物品一律忽略
-
-#### 2. 革命性拖拽式管理
-- **直观操作**：支持将游戏内道具直接拖拽到界面输入框
-- **即时反馈**：拖拽后物品名称立即显示，操作结果一目了然
-- **双向支持**：既支持手动输入，也支持拖拽添加，满足不同操作习惯
-- **操作简化**：移除复杂的"插入"按钮，交互更加直观自然
-
-#### 3. 智能物品列表系统
-- **容量优化**：从18个槽位精简为16个，与后端配置完美匹配
-- **管理功能**：保留"清空全部"和单个删除功能，批量操作更便捷
-- **实时更新**：物品列表与配置文件实时同步，确保数据一致性
-- **用户引导**：添加"支持将道具拖入输入框"提示，降低学习成本
-
-### 技术架构重大重构
-
-#### 1. 模块化代码架构
-- **配置管理迁移**：物品拾取配置从`main.lua`迁移至`mode-pick.lua`
-- **功能集中化**：所有拾取相关功能集中管理，提高代码内聚性
-- **变量统一**：规范变量命名，提高代码一致性和可维护性
-
-#### 2. 配置系统标准化
-- **字段顺序优化**：确保配置文件结构为`[player][plug][fight][pick][safe]`
-- **加载逻辑重构**：移除加载时立即写入的逻辑，避免配置混乱
-- **数据一致性**：优化读写机制，确保UI与配置文件完全同步
-
-#### 3. UI界面现代化
-- **界面简化**：移除复杂的"过滤模式"选择，采用简洁的单选设计
-- **布局重构**：重新设计物品管理区域，支持现代化的拖拽交互
-- **用户体验**：增加操作提示和状态反馈，提升易用性
-
----
-
-## 核心系统架构
-
-### 一、智能挂机系统（mode-fights.lua）
-
-#### v7.1 跟随系统重构
+### v7.1 智能跟随系统重构
 - **双层跟随策略**：强制跟随 + 逻辑跟随，确保跟随无死角
 - **智能距离判断**：基于搜索范围的距离检测，性能优异
 - **跟随范围限制**：最大25格搜索范围，避免性能问题
 - **函数命名规范**：Handle系列函数命名标准化
 
-#### 核心功能特性
-- **挂机点扩展**：支持20个挂机点，相比旧版11个点大幅提升
-- **智能巡逻**：支持挂机点间自动巡逻，覆盖更大的挂机区域
-- **沿途打怪**：移动过程中智能检测并攻击沿途怪物，提高效率
-- **Buff自动管理**：智能检测并补充"心灵之火、石化皮肤、风之领主"等增益状态
-- **治愈术智能**：支持HP阈值控制，自动给自己或目标补血
-- **医生模式**：专门的队友加状态模式，支持批量队友管理
+### v6.5 医生模式优化
+- **医生单挂打怪并使用增益技能逻辑优化**：仅当自身没有该状态时才释放相应技能，避免重复施放
 
-#### 技术优化
-- **状态机设计**：完善的三状态管理（寻找、攻击、移动）
-- **异常处理**：严格的空指针检查和属性验证
-- **性能优化**：优化寻路算法，减少死循环概率
-- **Lua兼容**：保持Lua 5.1兼容性，使用`table.getn`而非`#`操作符
+### v6.3 治愈术智能化
+- **治愈术逻辑重构**：移除检测技能栏中是否存在治愈术，增加治愈术阀值选项配置UI界面
+- **智能加血**：可自行设置HP百分比，治愈术无需再拖入技能栏
+- **双维度加血**：对目标为"人"时亦可按阈值给目标抬血，减少手动切换
 
-### 二、物品拾取系统（mode-pick.lua）
+### v5.3 挂机点扩展
+- **挂机点数量**：从12个增加至20个点
+- **状态提示**：增加提示语"正在前往哪个点"
 
-#### v7.0 革命性升级
-- **指定拾取模式**：从"过滤模式"升级为"指定物品拾取"，精确控制拾取目标
+### v5.1 治愈术自动化
+- **治愈术阀值配置**：默认值限定范围0-100，默认85
+- **智能检测**：检测技能栏中存在"治愈术"时才会（低于85%）自动加HP
+
+### v4 医生模式逻辑优化
+- **医生单挂增益技能条件**：不勾选"医生挂机"并且目标为"怪"
+- **医生非单挂治愈术逻辑**：医生挂机选项勾选不勾选都可触发，但目标要为"人"
+
+### v2 医生模式基础功能
+- **医生单挂打怪**：给自己加状态和（低于80%）自动加HP功能（需准确设置状态技能CD时间）
+
+### v1 沿途打怪优化
+- **沿途打怪逻辑改进**：移动阶段尝试就地攻击命中的怪，再继续移动，减少空跑
+
+### 技术优化
+- **目标判空与属性判空更严谨**：`hp == nil or hpmax == nil`，规避偶发空引用
+- **寻路与巡逻索引循环优化**：由取余改为显式递增与圈检，适配20点并减少死循环概率
+
+## 三、拾取系统（mode-pick.lua + UI）
+
+### v7.0 革命性升级
+- **指定物品拾取模式**：从"过滤模式"升级为"指定物品拾取"，精确控制拾取目标
 - **API对接**：`Game.PickItemName(szItemName)`实现按名称精确拾取
 - **拖拽式管理**：支持游戏内道具直接拖拽到输入框，操作直观
 - **智能物品列表**：16个槽位，支持直接输入和拖拽添加
-
-#### 拾取模式系统
-- **5种拾取模式**：全部拾取、仅装备、仅杂物、背包对照、指定物品拾取
+- **拾取模式系统**：5种拾取模式（全部拾取、仅装备、仅杂物、背包对照、指定物品拾取）
 - **延迟控制**：拾取延迟100-5000ms可调，避免过快拾取导致的问题
 - **智能过滤**：基于物品名称的精确匹配，避免误拾取
 
-### 三、安全保护系统（mode-safe.lua）
+### v6.4 物品过滤功能
+- **新增"物品过滤"功能**：（暂无API对接，无法使用）
+  - 过滤模式为"不过滤""白名单""黑名单"，默认为"不过滤"
+  - 18个物品槽位，支持动态插入与全部清空，支持任意单项删除
 
-#### 多层保护机制
+### v6.3 拾取功能增强
+- **新增"拾取全部"功能**：同时拾取类型默认为"拾取全部"
+- **拾取延迟优化**：默认值为500毫秒最低可设100毫秒
+
+
+## 四、保护与道具（mode-safe.lua + UI）
+
+### v6.3 道具系统重大升级
+- **道具使用栏增强**：HP/SP双档(低值与常规)优先使用低值道具 & 6位定时物品
+- **道具使用默认值**：HP/SP低值/常规值50/80,定时物品60/61/62/63/64/65
+- **自动喊话功能修复与优化**：默认间隔为30秒最低可设5秒
+
+### v6.2 功能稳定性提升
+- **道具使用安全时间优化**：改为全局道具
+
+### v6 代码结构优化
+- **道具使用安全时间优化**
+- **新增道具使用(秒)最小默认值为1**
+
+### 保护机制
 - **HP/SP双档保护**：低血线和常规阈值两级保护，分层消耗策略
 - **定时物品管理**：6个定时物品位，60-65秒错峰释放
 - **全局节流控制**：1秒物品使用限制，防止冲突和冷却问题
 - **精灵照护**：智能HP管理和成长道具使用
 
-#### 组队与社交
+### 组队与社交
 - **自动组队**：智能邀请和确认逻辑，6-36秒自适应轮询
 - **定时喊话**：可配置的定时喊话功能，最小5秒间隔
 - **状态监控**：实时监控队伍状态和成员情况
 
-### 四、用户界面系统（plug.xml）
+## 五、UI 与交互（plug.xml）
 
-#### v7.1 界面更新
-- **版本标识**：面板标题更新为`Ryanの辅助面板 v7.1`
+### v7.2 界面更新
+- **版本标识**：面板标题更新为`Ryanの辅助面板 v7.2`
 - **跟随界面**：优化跟随相关控件的布局和交互
 
-#### v7.0 界面重构
+### v7.0 界面重构
 - **拾取界面重构**：移除复杂的过滤模式选择，简化为直观的指定拾取
 - **拖拽支持**：物品列表支持拖拽操作，提升用户体验
 - **布局优化**：重新设计物品管理区域，16个槽位布局更合理
 
-#### 界面特性
+### v6.3 UI界面升级
+- **UI界面布局优化**
+- **说明Tab页面增加"支持一下"按钮**：浏览器跳转到我的页面
+
+### v6.1 导入导出界面
+- **UI界面优化**
+- **新增挂机点导入导出功能与交互提示**
+
+### v6 功能界面
+- **新增挂机点全部清空功能**
+
+### v5.3 界面优化
+- **UI界面优化**：详细说明与使用提示独立一标签页
+
+### v5.1 治愈术界面
+- **治愈术阀值选项配置UI界面**：可自行设置HP百分比
+
+### 界面特性
 - **多页面设计**：挂机、拾取、保护、说明四个主要页面
 - **控件丰富**：20个挂机点、16个物品槽位、6个定时物品位
 - **交互友好**：拖拽支持、一键清空、批量操作等现代化交互
 
-### 五、配置管理系统
+## 六、配置读写与容错
 
-#### v7.0 配置优化
-- **字段顺序标准化**：`[player][plug][fight][pick][safe]`标准顺序
-- **模块化管理**：各模块独立管理自己的配置，提高内聚性
-- **加载逻辑优化**：移除立即写入逻辑，避免配置文件混乱
+### v7.0 配置系统标准化
+- **字段顺序优化**：确保配置文件结构为`[player][plug][fight][pick][safe]`
+- **加载逻辑重构**：移除加载时立即写入的逻辑，避免配置混乱
+- **数据一致性**：优化读写机制，确保UI与配置文件完全同步
 
-#### 配置特性
+
+### 配置特性
 - **持久化存储**：所有设置自动保存，重启后完整恢复
 - **导入导出**：挂机点支持导入导出，便于多号复用
 - **容错处理**：完善的默认值和边界检查，确保配置有效性
 - **向后兼容**：新版本可读取旧版本配置，平滑升级
 
----
+## 七、行为细节与策略差异
 
-## 版本演进历程
+### 原版特性
+- 挂机点9个、无导入导出、无物品过滤UI、HP/SP单档、定时物品4位、医生治疗/自保策略较为基础
+- 巡逻与寻怪逻辑较简，少量`nil`判定与重试控制，沿途打怪触发较弱
+- 治愈术需要手动拖入技能栏，无智能加血功能
+- 跟随系统简单，容易出现跟丢问题
 
-### v7.1 (20250901) - 智能跟随时代
-**核心突破**：双层跟随策略，解决跟随稳定性问题
-- 智能跟随系统重构，基于搜索范围的距离判断
-- 强制跟随 + 逻辑跟随双层策略
-- 函数命名规范化，代码质量提升
-- 性能优化，搜索范围智能限制
+### Ryan新版特性
+- **v7.2**：原地挂机逻辑重构，智能返回策略，医生模式智能技能释放
+- **v7.1**：智能跟随系统重构，双层跟随策略，智能距离判断
+- **v7.0**：指定物品拾取，拖拽式管理，配置系统标准化
+- **v6.5**：医生模式优化，避免重复施放技能
+- **v6.4**：物品过滤功能（UI层面）
+- **v6.3**：道具系统重大升级，HP/SP双档，6位定时物品
+- **v6.2-v6.1**：导入导出功能，挂机点管理优化
+- **v6**：代码结构优化，道具使用安全时间
+- **v5.3-v5.1**：挂机点扩展至20个，治愈术智能化
+- **v5-v4**：医生模式逻辑优化，攻击目标修复
+- **v3-v1**：治愈术自动化，沿途打怪优化
 
-### v7.0 (20250831) - 精确拾取时代  
-**核心突破**：指定物品拾取，彻底解决拾取精确性问题
-- 物品拾取系统全面重构，支持按名称精确拾取
-- 拖拽式物品管理，操作直观现代化
-- 配置系统标准化，模块化架构重构
-- UI界面现代化，用户体验显著提升
+## 八、兼容性与版本习惯
 
-### v6.5及之前 - 功能完善时代
-**核心特点**：功能丰富，稳定性强
-- 挂机点从9个扩展到20个，支持复杂路径规划
-- HP/SP双档保护，定时物品从4个扩展到6个
-- Buff自动管理，治愈术智能控制
-- 导入导出功能，配置管理便捷
+- 仍遵循Lua 5.1生态，未使用`#`取表长，统一以`table.getn`/显式索引维持兼容
+- UI资源路径统一为`texture/ui2022/...`，旧版与新版同目录下可共存，不互相覆盖核心脚本名
 
-### 基础版本 - 基本功能时代
-**核心特点**：基础功能完整
-- 基本的挂机和拾取功能
-- 简单的保护机制
-- 基础的UI界面
+## 九、可能的影响面与注意事项
 
----
+- **物品过滤**：v7.0已实现指定物品拾取，从"显示与管理列表优先"升级为"精确拾取控制"
+- **节流策略**：全局1秒物品使用限制可能改变旧版"瞬时多物并发"行为，但更符合实际冷却与稳定性
+- **导入导出**：文件名为空/不存在会有友好提示；导入会覆盖UI展示与内存配置，请先保存当前配置以免丢失
+- **医生模式**：v7.2的智能技能释放确保只对玩家目标进行状态检查，避免对怪物等非玩家目标产生意外影响
 
-## 技术特性与优势
+## 十、技术特性与优势
 
 ### 代码架构
 - **模块化设计**：main.lua（核心控制）+ mode-*.lua（功能模块）+ plug.xml（界面）
@@ -235,9 +209,7 @@ v7.0版本实现了物品拾取系统的革命性升级，从传统的"过滤模
 - **反馈及时**：实时状态反馈和操作提示
 - **个性化**：丰富的配置选项，满足不同用户需求
 
----
-
-## 应用场景与优势
+## 十一、应用场景与优势
 
 ### 长时间挂机
 - **20个挂机点**：支持大范围巡逻，避免单点竞争
@@ -255,9 +227,7 @@ v7.0版本实现了物品拾取系统的革命性升级，从传统的"过滤模
 - **拖拽管理**：直观的物品列表管理，操作简单高效
 - **实时调整**：可随时调整拾取列表，适应不同场景
 
----
-
-## 兼容性与注意事项
+## 十二、系统要求与注意事项
 
 ### 系统要求
 - **客户端要求**：需要支持API调用的客户端
@@ -272,18 +242,17 @@ v7.0版本实现了物品拾取系统的革命性升级，从传统的"过滤模
 ### 升级建议
 - **v6.x → v7.0**：重点关注物品拾取功能的变化
 - **v7.0 → v7.1**：重点关注跟随系统的优化
+- **v7.1 → v7.2**：重点关注原地挂机和医生模式的优化
 - **配置迁移**：新版本自动处理配置迁移，无需手动操作
 
----
+## 十三、结论
 
-## 结论
+Ryan版本经过v7.2的原地挂机优化、v7.1的智能跟随重构和v7.0的物品拾取革新，已经发展成为一个功能完善、性能优异、用户体验出色的综合性挂机辅助系统。
 
-Ryan版本经过v7.1的智能跟随重构和v7.0的物品拾取革新，已经发展成为一个功能完善、性能优异、用户体验出色的综合性挂机辅助系统。
+**v7.2的原地挂机系统**解决了挂机逻辑不稳定的问题，更重要的是通过智能技能释放逻辑彻底解决了医生模式重复释放技能的核心痛点；**v7.1的智能跟随系统**解决了传统跟随的稳定性问题，实现了真正智能的队伍协作；**v7.0的指定物品拾取**提供了前所未有的精确控制能力，让用户可以精确管理背包内容。
 
-**v7.1的智能跟随系统**解决了传统跟随的稳定性问题，实现了真正智能的队伍协作；**v7.0的指定物品拾取**提供了前所未有的精确控制能力，让用户可以精确管理背包内容。
-
-结合20个挂机点、双档保护机制、Buff自动管理等丰富功能，Ryan版本为用户提供了一个稳定、高效、智能的挂机解决方案，适合各种长时间挂机场景和多角色管理需求。
+相比原版，Ryan版本在挂机点数量（9→20）、医生模式智能化、跟随系统稳定性、物品拾取精确性、道具系统完善度等方面都有重大提升，为用户提供了一个稳定、高效、智能的挂机解决方案，适合各种长时间挂机场景和多角色管理需求。
 
 ---
 
-*本文档全面介绍了Ryan版本的所有功能特性和技术优势，帮助用户充分了解和使用系统的各项能力。*
+*本文档全面介绍了Ryan版本从v1到v7.2的所有功能特性和技术优势，帮助用户充分了解和使用系统的各项能力。*
